--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         const previewDataContainer = document.getElementById('previewData');
         const studentPhotoInput = document.getElementById('student_photo');
         const studentSignatureInput = document.getElementById('student_signature');
-        const SCRIPT_URL = "YOUR_LATEST_DEPLOYMENT_URL_HERE"; 
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxeVuLIbzjTkDeu3UETPiF9AeG8gL36ZrikdA1wOt15sZZu0GBTCZMo3vKiygYnqafc/exec"; 
 
         function handleFileUpload(input, nameEl, iconEl, boxEl) {
             input.addEventListener('change', () => {
